- Corrected duplicate ID

--- a/templates/base/default-block-editor-content.twig
+++ b/templates/base/default-block-editor-content.twig
@@ -3,7 +3,7 @@
         Header
         {% block body_header_content %}
             {% block body_header_nav %}
-                <block-editor-component id="site-header" is="nav">
+                <block-editor-component is="nav">
                     {% block body_header_nav_content %}{% endblock %}
                 </block-editor-component>
             {% endblock %}
