--- a/templates/base/layout.twig
+++ b/templates/base/layout.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="logged-in">
+<html class="logged-in" xmlns:svelte="http://www.w3.org/1999/xhtml#svelte">
 <head>
     {% block head %}
         {% block head_meta %}
