--- a/templates/base/default-block-editor-content.twig
+++ b/templates/base/default-block-editor-content.twig
@@ -1,40 +1,40 @@
 {% block body_header %}
-    <block-editor-component id="site-header" is="header" class="col-span-full sticky full-width site-margin-left site-margin-right">
+    <section data-svelte-component="BlockEditorComponent" id="site-header" is="header" class="col-span-full sticky full-width site-margin-left site-margin-right">
         Header
         {% block body_header_content %}
             {% block body_header_nav %}
-                <block-editor-component is="nav">
+                <section data-svelte-component="BlockEditorComponent" is="nav">
                     {% block body_header_nav_content %}{% endblock %}
-                </block-editor-component>
+                </section>
             {% endblock %}
         {% endblock %}
-    </block-editor-component>
+    </section>
 {% endblock %}
-<block-editor-component is="section" id="site-content-wrapper" class="col-span-full grid grid-cols-1 lg:grid-cols-12 gap-4 gap-y-0 overflow-hidden site-margin-left site-margin-right">
+<section data-svelte-component="BlockEditorComponent" is="section" id="site-content-wrapper" class="col-span-full grid grid-cols-1 lg:grid-cols-12 gap-4 gap-y-0 overflow-hidden site-margin-left site-margin-right">
     {% block body_main %}
-        <block-editor-component is="section" id="content" class="order-2 lg:col-start-3 col-span-full grid grid-cols-1 lg:grid-cols-12 gap-4">
+        <section data-svelte-component="BlockEditorComponent" is="section" id="content" class="order-2 lg:col-start-3 col-span-full grid grid-cols-1 lg:grid-cols-12 gap-4">
             {% block body_main_content %}Main{% endblock %}
-        </block-editor-component>
+        </section>
     {% endblock %}
     {% block body_asides %}
         {% block body_aside_left %}
-            <block-editor-component is="aside" class="order-1 left relative col-span-2 lg:col-span-auto">
-                <block-editor-component is="section">
+            <section data-svelte-component="BlockEditorComponent" is="aside" class="order-1 left relative col-span-2 lg:col-span-auto">
+                <section data-svelte-component="BlockEditorComponent" is="section">
                     {% block body_aside_left_content %}Left{% endblock %}
-                </block-editor-component>
-            </block-editor-component>
+                </section>
+            </section>
         {% endblock %}
         {% block body_aside_right %}
-            <block-editor-component is="aside" class="order-3 right relative col-span-2 lg:col-span-auto">
-                <block-editor-component is="section">
+            <section data-svelte-component="BlockEditorComponent" is="aside" class="order-3 right relative col-span-2 lg:col-span-auto">
+                <section data-svelte-component="BlockEditorComponent" is="section">
                     {% block body_aside_right_content %}Right{% endblock %}
-                </block-editor-component>
-            </block-editor-component>
+                </section>
+            </section>
         {% endblock %}
     {% endblock %}
-</block-editor-component>
+</section>
 {% block body_footer %}
-    <block-editor-component is="footer" id="site-footer" class="col-span-full site-margin-left site-margin-right">
+    <section data-svelte-component="BlockEditorComponent" is="footer" id="site-footer" class="col-span-full site-margin-left site-margin-right">
         {% block body_footer_content %}Footer{% endblock %}
-    </block-editor-component>
+    </section>
 {% endblock %}
