- Finds and mounts all vue components on the page

--- a/templates/base/default-block-editor-content.twig
+++ b/templates/base/default-block-editor-content.twig
@@ -4,7 +4,7 @@
         {% block body_header_content %}
             {% block body_header_nav %}
                 <section data-vue-component='{"name": "BlockEditorComponent"}' is="nav">
-                    {% block body_header_nav_content %}{% endblock %}
+                    {% block body_header_nav_content %}Nav{% endblock %}
                 </section>
             {% endblock %}
         {% endblock %}
