--- a/templates/index.twig
+++ b/templates/index.twig
@@ -4,6 +4,6 @@
 {#% block body_aside_right %}{% endblock %#}
 {% block body %}
 	<section data-vue-component='{"name": "BlockEditor"}' id="page-wrapper">
-		<components class="grid grid-cols-3">{% include 'base/default-block-editor-content.twig' %}</components>
+		<section class="editor-components grid grid-cols-3">{% include 'base/default-block-editor-content.twig' %}</section>
 	</section>
 {% endblock %}
