--- a/templates/login.twig
+++ b/templates/login.twig
@@ -8,33 +8,34 @@
 
         {% if app.user %}
             <div class="mb-3">
-                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                You are logged in as {{ app.user.username }}, <a href="{{ logout_url() }}">Logout</a>
             </div>
-        {% endif %}
+		{% else %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail">Email</label>
-        <input type="email" value="{{ last_username }}" name="_username" id="inputEmail" class="form-control" required autofocus>
-        <label for="inputPassword">Password</label>
-        <input type="password" name="_password" id="inputPassword" class="form-control" required>
+			<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+			<label for="inputEmail">Email</label>
+			<input type="email" value="{{ last_username }}" name="_username" id="inputEmail" class="form-control" required autofocus>
+			<label for="inputPassword">Password</label>
+			<input type="password" name="_password" id="inputPassword" class="form-control" required>
 
-        <input type="hidden" name="_csrf_token"
-               value="{{ csrf_token('authenticate') }}"
-        >
+			<input type="hidden" name="_csrf_token"
+				value="{{ csrf_token('authenticate') }}"
+			>
 
-        {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
+			{#
+			Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+			See https://symfony.com/doc/current/security/remember_me.html
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-        #}
+			<div class="checkbox mb-3">
+				<label>
+					<input type="checkbox" name="_remember_me"> Remember me
+				</label>
+			</div>
+			#}
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
-        </button>
+			<button class="btn btn-lg btn-primary" type="submit">
+				Sign in
+			</button>
+		{% endif %}
     </form>
 {% endblock %}
