- Added initial svelte components

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -3,7 +3,8 @@
 {# Prevent right sidebar from showing. #}
 {#% block body_aside_right %}{% endblock %#}
 {% block body %}
-	<template data-for="BlockEditor">
+	<section {{ svelte_component('BlockEditor', {}) }}></section>
+	<section data-vue-component='{"name": "BlockEditor"}' id="page-wrapper">
 		<section class="editor-components grid grid-cols-3">{% include 'base/default-block-editor-content.twig' %}</section>
 	</template>
 	<section {{ svelte_component('BlockEditor', {}) }}></section>
