--- a/templates/index.twig
+++ b/templates/index.twig
@@ -3,10 +3,8 @@
 {# Prevent right sidebar from showing. #}
 {#% block body_aside_right %}{% endblock %#}
 {% block body %}
-	<section {{ svelte_component('BlockEditor', {}) }}>
-		Loading...
-	</section>
-	<section data-vue-component='{"name": "BlockEditor"}' id="page-wrapper">
+	<template data-for="BlockEditor">
 		<section class="editor-components grid grid-cols-3">{% include 'base/default-block-editor-content.twig' %}</section>
-	</section>
+	</template>
+	<section {{ svelte_component('BlockEditor', {}) }}></section>
 {% endblock %}
