- Added flash message for MFA

--- a/templates/login.twig
+++ b/templates/login.twig
@@ -5,6 +5,14 @@
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
+	
+		{% for label, messages in app.flashes() %}
+			{% for message in messages %}
+				<div class="flash-{{ label }}">
+					{{ message }}
+				</div>
+			{% endfor %}
+		{% endfor %}
 
         {% if app.user %}
             <div class="mb-3">
