--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,8 +1,8 @@
-@import '~tailwindcss/base';
-@import '~tailwindcss/components';
-@import '~tailwindcss/utilities';
+@use '~tailwindcss/base';
+@use '~tailwindcss/components';
+@use '~tailwindcss/utilities';
 
-@import "./app-dark.scss";
+@use "app-dark.scss";
 
 body {
     background-color: lightgray;
