--- a/templates/index.twig
+++ b/templates/index.twig
@@ -3,7 +3,7 @@
 {# Prevent right sidebar from showing. #}
 {#% block body_aside_right %}{% endblock %#}
 {% block body %}
-	<section {{ svelte_component('BlockEditor', {}) }}>
+	<section data-component="BlockEditorComponent">
 		{% include 'base/default-block-editor-content.twig' %}
 	</section>
 	<!--section data-vue-component='{"name": "BlockEditor"}' id="page-wrapper">
