- Updated composer php dependencies - Now requires a minimum of PHP 8.4 - Removed reliance on ivopetkov/html5-dom-document-php - Changed from using ivopetkov/html5-dom-document-php to built-in Dom\Document HTML5 parser in PHP version 8.4

--- a/templates/base/layout.twig
+++ b/templates/base/layout.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="logged-in">
+<html lang="en" class="logged-in">
 <head>
     {% block head %}
         {% block head_meta %}
