- Fixed html filter not filtering comments and including script/style/pre descendants

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,7 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
+		<!-- Comment -->
     </head>
     <body>
         {% block body %}{% endblock %}
