--- a/templates/base/layout.twig
+++ b/templates/base/layout.twig
@@ -21,8 +21,12 @@
             ) }#}
         {% endblock %}
     {% endblock %}
+	<!-- comment -->
 </head>
 <body class="text-black bg-white dark:text-white dark:bg-gray-900">
+	<pre> <span>text</span>
+	More text
+	</pre>
     {% block body_before %}{% endblock %}
     {% block body %}{% endblock %}
     {% block body_after %}{% endblock %}
